--- a/random_shit/static/app/css/main.css
+++ b/random_shit/static/app/css/main.css
@@ -1,3 +1,34 @@
 body{
-    background: aqua;
+    background: aqua!important;
+}
+
+#site_title{
+    font-size: 40px;
+    font-weight: bold;
+}
+
+#reload{
+    text-align: center;
+    width: 180px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background: #59aa8d;
+
+    border-radius: 0.2rem;
+
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
+
+    margin: auto;
+
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+#reload:hover{
+    background: #468c72;
+}
+
+#video_iframe{
+        margin: auto!important;
 }
